# PID_controller_for_LRAUV

./: .gitignore  README.md
src/PID_PRO_controller/: package.xml  setup.cfg  setup.py
src/PID_PRO_controller/PID_PRO_controller/: lrauv_3d_los_controller.py  trajectory_paraview.py  trajectory_plotter.py  waypoints.yaml
src/PID_PRO_controller/launch/: PID_PRO_controller.launch.py
src/PID_PRO_controller/models/my_lrauv/: model.sdf
src/PID_PRO_controller/output/: render_paraview.py  trajectory.csv  waypoints.csv
src/PID_PRO_controller/worlds/: buoyant_lrauv.sdf
src/pid_controller/: package.xml  setup.py
src/pid_controller/bridge/: bridge_config.yaml
src/pid_controller/launch/: pid_controller.launch.py
src/pid_controller/pid_controller/: pid_controller_node.py  trajectory_plotter.py  waypoints.yaml
src/pid_controller/results_and_plots/: chumma_file
