<?xml version="1.0"?>
<package format="3">
  <name>pid_controller</name>
  <version>0.0.0</version>
  <description>PID controller + Gazebo world launcher</description>

  <maintainer email="your_email@example.com">thiru</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
