<?xml version="1.0"?>
<package format="3">
  <name>pid_controller</name>
  <version>0.0.0</version>
  <description>PID controller + Gazebo world launcher</description>

  <maintainer email="na22b078@smail.iitm.ac.in">thiru</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





